<resources>
    <string name="app_name">JURY</string>
    <string name="hint_dob">Enter Age</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_gender">I am</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btn_sign_up">Register !!</string>
    <string name="err_msg_name">Please enter a Name</string>
    <string name="err_msg_required">Valid Input Required</string>
    <string name="err_msg_email">Please enter a Valid Email</string>
    <string name="err_msg_password">Enter a Password</string>
    <string name="err_msg_dob">Enter a valid D.O.B</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_signup">Don\'t have an account yet Register !!</string>
    <string name="btn_link_login">Already have an account Login !!</string>
    <string name="btn_submit">submit</string>
    <string name="btn_link_page">terms</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>
    <string name="btn_side">sidenav</string>

    <string name="chk_1">I understand the fact that I take part in this voluntarily</string>
    <string name="chk_2">I understand the fact that I can stop using this app at any moment</string>
    <string name="chk_3">Term 3</string>
    <string name="btn_confirm">Confirm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="terms_view">Terms and Conditions</string>
    <string name="instructions_view">This is the instructions page...follow this to score well in the game ..good luck</string>
    <string name="fragment_one_view">FragmentOne</string>
    <string name="fragment_two_view">FragmentTwo</string>

    <string name="toxic">Toxic</string>
    <string name="not_toxic">Not Toxic</string>
    <string name="somewhat_toxic">somewhat Toxic</string>


</resources>
