<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/instructions">

    <TextView
        android:text="@string/instructions_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:id="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp" />

    <Button android:id="@+id/btn_previous"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_previous"
        android:layout_marginTop="3dp"
        android:textColor="@android:color/black"/>

    <Button android:id="@+id/btn_next"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_next"
        android:layout_marginTop="3dp"
        android:textColor="@android:color/black"/>

    <Button android:id="@+id/btn_side"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_side"
        android:layout_marginTop="3dp"
        android:textColor="@android:color/black"/>

</LinearLayout>