<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/sunny">

    <TextView
        android:text="@string/terms_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:id="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp" />


    <CheckBox
        android:id="@+id/chk1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_1"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <CheckBox
        android:id="@+id/chk2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_2"
        android:checked="true"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/chk1"
        android:layout_alignLeft="@+id/btnDisplay"
        android:layout_alignStart="@+id/btnDisplay" />

    <CheckBox
        android:id="@+id/chk3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_3"
        android:layout_above="@+id/chk1"
        android:layout_alignLeft="@+id/chk1"
        android:layout_alignStart="@+id/chk1"
        android:layout_marginBottom="22dp" />

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirm"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="79dp"
        android:layout_below="@+id/chk2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</LinearLayout>